--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,14 @@ h1 {
     font-size: 40px;
 }
 
-.wrapper_content {
+.wrapperContent {
     margin-left: 20px;
     margin-top: 30px;
     margin-bottom: 20px;
     display: flex;
 }
 
-.wrapper_game_field {
+.wrapperGameField {
     border: 1px solid #000;
     width: 702px;
     height: 402px;
@@ -24,29 +24,20 @@ h1 {
     flex-wrap: wrap;
 }
 
-.wrapper_cube {
-    width: 50px;
-    height: 50px;
-}
-
-.wrapper_stat_header {
+.wrapperStatHeader {
     display: flex;
     margin-top: 20px;
     width: 970px;
 }
 
-.wrapper_result_table {
+.wrapperResultTable {
     width: 250px;
     height: 400px;
     border: 1px solid #000;
     margin-left: 20px;
 }
 
-.btn_pause {
-    margin: 0 20px;
-}
-
-.points_wrapper {
+.pointsWrapper {
     margin: 0 50px;
 }
 
@@ -70,7 +61,7 @@ h1 {
     padding: 5px 5px;
 }
 
-.heading_result {
+.headingResult {
     font-size: 32px;
     text-align: center;
     margin-bottom: 10px;
@@ -100,47 +91,7 @@ h1 {
     background-color: black;
 }
 
-.darkgray {
-    background-color: darkgray;
-}
-
-.darkslateblue {
-    background-color: darkslateblue;
-}
-
-.deeppink {
-    background-color: deeppink;
-}
-
-.khaki {
-    background-color: khaki;
-}
-
-.lawngreen {
-    background-color: lawngreen;
-}
-
-.lightseagreen {
-    background-color: lightseagreen;
-}
-
-.maroon {
-    background-color: maroon;
-}
-
-.orange {
-    background-color: orange;
-}
-
-.purple {
-    background-color: purple;
-}
-
-.inactive {
-    display: none;
-}
-
-.modal_wrapper {
+.modalWrapper {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -155,11 +106,11 @@ h1 {
     display: block;
 }
 
-.wrapper_name_modal {
+.wrapperNameModal {
     display: flex;
 }
 
-.my_modal {
+.myModal {
     width: 20%;
     margin: 10% 40% 0;
     text-align: center;
@@ -170,41 +121,36 @@ h1 {
     border-radius: 20px;
 }
 
-.final_score {
+.finalScore {
     text-align: left;
     margin: 7% 0;
     font-size: 24px;
 }
 
-.btn_modal {
+.btnModal {
     position: absolute;
     bottom: 10%;
     left: 40%;
     width: 20%;
 }
 
-.name_player {
+.namePlayer {
     margin-right: 5%;
     font-size: 24px;
 }
 
-#str {
-    font-size: 18px;
-    padding: 0 5%;
-}
-
-.close_modal {
+.closeModal {
     display: none !important;
 }
 
-#name_val {
+#nameVal {
     font-size: 26px;
     width: 50%;
     display: inline-block;
     padding-left: 10px;
 }
 
-#points_val {
+#pointsVal {
     font-size: 26px;
     margin-left: 5px;
     width: 44%;
@@ -241,4 +187,9 @@ h1 {
     font-size: 46px;
     justify-content: center;
     align-items: center;
+}
+
+#resultContainer {
+    overflow: auto;
+    height: 350px;
 }
